# unofficial-pie-hs

./: CHANGELOG.md  LICENSE  README.md  basic-little-typer-proof-assistant.cabal  runTests.sh  unofficial-pie-hs.cabal
TestPiePrograms/: OneNeqZero.pie  OnePlusOneEqualsTwo.pie  TestProgram1.pie  TestProgram2.pie  TestProgram3.pie  TestProgram4.pie  TestProgram5.pie  TestProgram7.pie
app/: Main.hs
src/: Interface.hs  Parser.hs  TypingRules.hs
src-public/: Interface.hs
src/Common/: Types.hs  Utils.hs
src/InterfaceIO/: Interface.hs
src/Parser/: Parser.hs  SyntacticTypes.hs  Types.hs
src/Typing/: ActualSemTypes.hs  AlphaConversion.hs  CoreTypes.hs  Equivalence.hs  Normalization.hs  SemanticTypes.hs  TypeChecker.hs  TypingRules.hs
src/Utils/: BasicTypes.hs
test/: AlphaConversionSpec.hs  ParsingSpec.hs
tests/haskell/: ParsingSpec.hs
tests/pie/: TestProgram1.pie  TestProgram10.pie  TestProgram11.pie  TestProgram12.pie  TestProgram13.pie  TestProgram14.pie  TestProgram15.pie  TestProgram16.pie  TestProgram17.pie  TestProgram18.pie  TestProgram2.pie  TestProgram4.pie  TestProgram6.pie  TestProgram8.pie  TestProgram9.pie
tests/pie/bookTests/: OneNeqZero.pie  OnePlusOneEqualsTwo.pie
tests/pie/customTests/testsThatShouldFail/: TestProgram1.pie  TestProgram2.pie  TestProgram3.pie  TestProgram4.pie  TestProgram5.pie  TestProgram6.pie
tests/pie/customTests/testsThatShouldPass/: TestProgram1.pie  TestProgram10.pie  TestProgram11.pie  TestProgram12.pie  TestProgram2.pie  TestProgram3.pie  TestProgram4.pie  TestProgram5.pie  TestProgram6.pie  TestProgram7.pie  TestProgram8.pie  TestProgram9.pie
